--- a/index 1.html
+++ b/index 1.html
@@ -5,10 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>STREET-88</title>
+    <link rel="stylesheet" href="style/main 1.css">
 </head>
 <body>
     <header class="header">
-        <nav class="header__nav">
+        <nav class="header__nav container">
             <div class="header__navbar-box" >
                 <img src="img/Vector (1).png" alt="#!">
                 <p class="header__navbar-text">Проезд</p>
