--- a/index 1.html
+++ b/index 1.html
@@ -21,5 +21,19 @@
             </ul>
         </nav>
     </header>
+    <main class="main">
+        <section class=" main__info">
+            <nav class="main__info-navbar container">
+                <button class="main__info-btn">STREET 88</button>
+                <ul class="main__info-list ">
+                    <li><a href="#!" class="main__info-link">Главная</a></li>
+                    <li><a href="#!" class="main__info-link">Корзина</a></li>
+                    <li><a href="#!" class="main__info-link">Меню</a></li>
+                    <li><a href="index 2.html" class="main__info-link">О нас</a></li> 
+                    <li><a href="#!" class="main__info-link">Контакты</a></li>
+                </ul>
+            </nav>
+        </section>
+    </main>
 </body>
 </html>
