--- a/index 1.html
+++ b/index 1.html
@@ -34,6 +34,17 @@
                 </ul>
             </nav>
         </section>
+        <section class="main__intro">
+            <div class="main__intro-box container">
+                <h1 class="main__intro-title">Большой гамбургер</h1>
+                <p class="main__intro-text-1">говядина</p>
+                <p class="main__intro-text-2">Свежая хрустящая булочка, листики салата, маринованный огурец с луком и небольшая котлета, сдобренная майонезом и кетчупом, - таков классический портрет гамбургера, наиболее распространенной «быстрой» еды в США, от отравления которой ежедневно на больничных койках оказываются десятки тысяч американцев</p>
+                <div class="main__intro-btn-box">
+                    <button class="main__intro-btn-1">14500</button>
+                    <button class="main__intro-btn-2" >Просмотреть</button>
+                </div>
+            </div>
+        </section>
     </main>
 </body>
 </html>
