--- a/index 1.html
+++ b/index 1.html
@@ -45,6 +45,97 @@
                 </div>
             </div>
         </section>
+        <section class="main__menu">
+                   <ul class="main__menu-list">
+                    <li><a href="#!" class="main__menu-link">Бургеры</a></li>
+                    <li><a href="#!" class="main__menu-link">Хот-Доги</a></li>
+                    <li><a href="#!" class="main__menu-link">Лаваши</a></li>
+                    <li><a href="#!" class="main__menu-link">Напитки</a></li>
+                   </ul>
+
+                   <div class="main__menu-2">
+                     <div class="main__menu-box">
+                       <div class="main__menu-img-box">
+                          <img  class="main__menu-img" src="img/Vector (2).png" alt="#!">
+                       </div>
+                       <h2 class="main__menu-title">Мясная лагуна</h2>
+                       <p class="main__menu-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit ut aliquam, purus sit amet luctus venenatis, lectus magna fringilla urna, porttitor</p>
+                     </div>
+                     <div class="main__menu-box">
+                       <div class="main__menu-img-box">
+                          <img  class="main__menu-img" src="img/Vector (2).png" alt="#!">
+                       </div>
+                       <h2 class="main__menu-title">Мясная лагуна</h2>
+                       <p class="main__menu-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit ut aliquam, purus sit amet luctus venenatis, lectus magna fringilla urna, porttitor</p>
+                     </div>
+                     <div class="main__menu-box">
+                       <div class="main__menu-img-box">
+                          <img  class="main__menu-img" src="img/Vector (2).png" alt="#!">
+                       </div>
+                       <h2 class="main__menu-title">Мясная лагуна</h2>
+                       <p class="main__menu-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit ut aliquam, purus sit amet luctus venenatis, lectus magna fringilla urna, porttitor</p>
+                     </div>
+                     <div class="main__menu-box">
+                       <div class="main__menu-img-box">
+                          <img  class="main__menu-img" src="img/Vector (2).png" alt="#!">
+                       </div>
+                       <h2 class="main__menu-title">Мясная лагуна</h2>
+                       <p class="main__menu-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit ut aliquam, purus sit amet luctus venenatis, lectus magna fringilla urna, porttitor</p>
+                     </div>
+                     <div class="main__menu-box">
+                       <div class="main__menu-img-box">
+                          <img  class="main__menu-img" src="img/Vector (2).png" alt="#!">
+                       </div>
+                       <h2 class="main__menu-title">Мясная лагуна</h2>
+                       <p class="main__menu-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit ut aliquam, purus sit amet luctus venenatis, lectus magna fringilla urna, porttitor</p>
+                     </div>
+                     <div class="main__menu-box">
+                       <div class="main__menu-img-box">
+                          <img  class="main__menu-img" src="img/Vector (2).png" alt="#!">
+                       </div>
+                       <h2 class="main__menu-title">Мясная лагуна</h2>
+                       <p class="main__menu-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit ut aliquam, purus sit amet luctus venenatis, lectus magna fringilla urna, porttitor</p>
+                     </div>
+                     <div class="main__menu-box">
+                       <div class="main__menu-img-box">
+                          <img  class="main__menu-img" src="img/Vector (2).png" alt="#!">
+                       </div>
+                       <h2 class="main__menu-title">Мясная лагуна</h2>
+                       <p class="main__menu-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit ut aliquam, purus sit amet luctus venenatis, lectus magna fringilla urna, porttitor</p>
+                     </div>
+                     <div class="main__menu-box">
+                       <div class="main__menu-img-box">
+                          <img  class="main__menu-img" src="img/Vector (2).png" alt="#!">
+                       </div>
+                       <h2 class="main__menu-title">Мясная лагуна</h2>
+                       <p class="main__menu-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit ut aliquam, purus sit amet luctus venenatis, lectus magna fringilla urna, porttitor</p>
+                     </div>
+                   </div>
+        </section>
+        <section class="main__location">
+          <div>
+            <h2 class="main__location-title">
+              ФИЛИАЛЫ
+            </h2>
+           <img class="main__location-img" src="img/image 1.png" alt="#!">
+          </div>
+        </section>
     </main>
+    <footer>
+      <div class="footer__info">
+        <div class="footer__info-box container">
+          <button class="footer__info-btn">STREET 88</button>
+          <p class="footer__info-text">+998 90 132 45 67 </p>
+        </div>
+        <ul class="footer__info-list">
+          <li><a href="#!" class="footer__info-link">Меню</a></li>
+          <li><a href="index 2.html" class="footer__info-link">О нас</a></li>
+          <li><a href="#!" class="footer__info-link">Контакты</a></li>
+        </ul>
+      </div>
+      <div class="footer__last-box">
+        <p class="footer__last-text">Сайт разработан в целях обучения в PROWEB</p>
+      </div>
+    </footer>
 </body>
 </html>
