--- a/index 2.html
+++ b/index 2.html
@@ -5,8 +5,78 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>STREET-88</title>
+    <link rel="stylesheet" href="style/main 2.css">
 </head>
 <body>
-    
+    <header class="header">
+        <nav class="header__nav container">
+            <div class="header__navbar-box" >
+                <img src="img/Vector (1).png" alt="#!">
+                <p class="header__navbar-text">Проезд</p>
+            </div>
+            <ul class="header__navbar-list">
+                <li><a href="#!" class="header__navbar-link">Покупателям</a></li>
+                <li><a href="#!" class="header__navbar-link">Сотрудничество</a></li>
+                <li><a href="#!" class="header__navbar-link">Доставка</a></li>
+            </ul>
+        </nav>
+    </header>
+    <main class="main">
+        <section class=" main__info">
+            <nav class="main__info-navbar container">
+                <button class="main__info-btn">STREET 88</button>
+                <ul class="main__info-list ">
+                    <li><a href="index 1.html" class="main__info-link">Главная</a></li>
+                    <li><a href="#!" class="main__info-link">Корзина</a></li>
+                    <li><a href="#!" class="main__info-link">Меню</a></li>
+                    <li><a href="#!" class="main__info-link">О нас</a></li> 
+                    <li><a href="#!" class="main__info-link">Контакты</a></li>
+                </ul>
+            </nav>
+        </section>
+        <section class="main__intro">
+            <div class="main__intro-box container">
+                <h1 class="main__intro-title">Большой гамбургер</h1>
+                <p class="main__intro-text-1">говядина</p>
+                <p class="main__intro-text-2">Свежая хрустящая булочка, листики салата, маринованный огурец с луком и небольшая котлета, сдобренная майонезом и кетчупом, - таков классический портрет гамбургера, наиболее распространенной «быстрой» еды в США, от отравления которой ежедневно на больничных койках оказываются десятки тысяч американцев</p>
+                <div class="main__intro-btn-box">
+                    <button class="main__intro-btn-1">14500</button>
+                    <button class="main__intro-btn-2" >Просмотреть</button>
+                </div>
+            </div>
+        </section>
+        <section class="main__about">
+                   <div class="main__about-box container">
+                      <div class="main__about-img">
+                        <p class="main__about-img-text">street 88</p>
+                      </div>
+                      <p class="main__about-text">На сегодняшний день Street77 является одним из ведущих заведений в сфере быстрого питания. Начали свою деятельность в 28 августа 2015 году. Первый филиал был открыт в ТРК NEXT. На начальном этапе развития  меню не могло похвастаться большим изобилием, но  разнообразие всевозможных сэндвичей, которые на тот момент были основой меню, быстро смогли завоевать любовь гостей. Довольные результатом, но не намеренные останавливаться на достигнутом, мы продолжили совершенствоваться. Спустя всего пару месяцев, 25 октября 2015 года был открыт новый филиал в ТРЦ Samarqand Darvoza. И только спустя немногим больше полутора года, 14 мая 2017 года был открыт наш основной филиал на Ц1, уютное заведение, где можно приятно провести время с семьёй, друзьями и любимым человеком. Изменения в меню проводились колоссальные, многое было убрано, что-то изменено, и ещё больше добавлено, но неизменными остались качество и вкус, так высоко ценимые нашими дорогими посетителями. Стараясь радовать гостей, мы расширяем зоны доставки, обновляем меню, соответствуя брендам мировых стандартов. Каждый ингредиент, используемый на нашей кухне, проходит тщательный контроль, чтобы в итоге стать вкусным блюдом и украшением вашего стола! На сегодняшний день Street77 готов порадовать вас и ваших близких вкуснейшими бургерами с котлетами из рубленой говядины, филе минтая, хрустящей курочкой в панировке, изысканными салатами, супами, а с недавних пор ещё и пиццей! И на достигнутом останавливаться мы не намерены. Спасибо, что изо дня в день, из года в год остаётесь с нами, давайте же будем создавать свое собственное меню, пожелания наших гостей - основа наших инноваций, и когда нибудь на каждой улице Ташкента Street77 будет радовать вас нашими любимыми блюдами!</p>
+                   </div>
+        </section>
+        <section class="main__location">
+          <div>
+            <h2 class="main__location-title">
+              ФИЛИАЛЫ
+            </h2>
+           <img class="main__location-img" src="img/image 1.png" alt="#!">
+          </div>
+        </section>
+    </main>
+    <footer>
+      <div class="footer__info">
+        <div class="footer__info-box container">
+          <button class="footer__info-btn">STREET 88</button>
+          <p class="footer__info-text">+998 90 132 45 67 </p>
+        </div>
+        <ul class="footer__info-list">
+          <li><a href="#!" class="footer__info-link">Меню</a></li>
+          <li><a href="index 2.html" class="footer__info-link">О нас</a></li>
+          <li><a href="#!" class="footer__info-link">Контакты</a></li>
+        </ul>
+      </div>
+      <div class="footer__last-box">
+        <p class="footer__last-text">Сайт разработан в целях обучения в PROWEB</p>
+      </div>
+    </footer>
 </body>
 </html>
